--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <li><a href="#awards-section">Awards</a></li>
             <li><a href="#conferences-section">Conferences</a></li>
             <li><a href="publications.html">Research Work</a></li>
+            <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
             <li><a href="#talks-section">Talks</a></li>
             <li><a href="#contact-section">Contact Me</a></li>
