--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
             <li><a href="index.html#awards-section">Awards</a></li>
             <li><a href="index.html#conferences-section">Conferences</a></li>
             <li><a href="publications.html">Research Work</a></li>
+            <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
             <li><a href="index.html#talks-section">Talks</a></li>
             <li><a href="index.html#contact-section">Contact Me</a></li>
