--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/1d69a3e365.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="pics vivek/iitd logo.png" type="image/png">
     <title>Professor Vivek Kumar - IIT Delhi</title>
 
     </head>
