--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
             <li><a href="students.html">Research Students</a></li>
             <li><a href="#talks-section">Talks</a></li>
             <li><a href="#contact-section">Contact Me</a></li>
-            <li><a href="pics vivek/CV.pdf" target="_blank" download>CV</a></li>
         </ul>
     </nav>
 
@@ -170,7 +169,7 @@
     </div>
 
     <div class="header-content" style="position: absolute; top: 0; right: 0; display: flex; align-items: center;">
-        <img src="pics/vivek.png" alt="Professor's Photo" width="350" style="margin-top: 50px; margin-right: 100px;" />
+        <img src="pics vivek/vivek Sir.jpg" alt="Professor's Photo" width="350" style="margin-top: 50px; margin-right: 100px;" />
         <div>
             <h2 style="color: rgb(224, 16, 16); margin-top: 10px">Professor Vivek Kumar</h2>
             <p><strong>Email:</strong>vivekk@rdat.iitd.ac.in</p>
