--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
 
     <div class="header-content" style="position: absolute; top: 0; right: 0; display: flex; align-items: center;">
-        <img src="pics vivek/vivek Sir.jpg" alt="Professor's Photo" width="350" style="margin-top: 50px; margin-right: 100px;" />
+        <img src="pics vivek/vivek Sir.jpg" alt="Professor's Photo" width="200" style="margin-top: 50px; margin-right: 100px;" />
         <div>
             <h2 style="color: rgb(224, 16, 16); margin-top: 10px">Professor Vivek Kumar</h2>
             <p><strong>Email:</strong>vivekk@rdat.iitd.ac.in</p>
@@ -179,8 +179,8 @@
             <br>
             <a href="mailto:vivekk@rdat.iitd.ac.in" style="color: rgb(104, 21, 104); text-decoration: none;"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a>
             <a href="https://www.linkedin.com/in/" target="_blank" style="color: rgb(104, 21, 104); text-decoration: none; margin-left: 10px;"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a>
-            <a href="https://scholar.google.co.in/citations?user=banSojwAAAAJ&hl=en" target="_blank" style="color: rgb(104, 21, 104) ; text-decoration: none; margin-left: 10px;"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i> Google Scholar</a>
-            <a href="https://www.researchgate.net/profile/Vivek-Kumar-233" target="_blank" style="color: rgb(104, 21, 104); text-decoration: none; margin-left: 10px;"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a>
+            <a href="https://scholar.google.co.in/citations?user=banSojwAAAAJ&hl=en" target="_blank" style="color: rgb(104, 21, 104) ; text-decoration: none; margin-left: 10px;"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i> Google Scholar</a><br><br>
+            <a href="https://www.researchgate.net/profile/Vivek-Kumar-233" target="_blank" style="color: rgb(104, 21, 104); text-decoration: none; margin-left: 0px;"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a>
         </div>
     </div>
 </header>
