--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 
     <section id="home-section" class="professor-info">
         <!-- Content for Home section -->
-        <p>Hi, I am working as an <strong>Professor</strong> in CRDT at Indian Institute of Technology Delhi</p>
-        <p>I was also a visiting <strong>Research Professor</strong> in the Department of Chemical Engineering and Applied Sciences at University of Toronto.</p>
+        <!-- <p>Hi, I am working as an <strong>Professor</strong> in CRDT at Indian Institute of Technology Delhi</p> -->
+        <!-- <p>I was also a visiting <strong>Research Professor</strong> in the Department of Chemical Engineering and Applied Sciences at University of Toronto.</p> -->
 
         <div class="skills-container">
           <h3 style="color: rgb(232, 56, 56); margin-left: -20px;">Skills and Expertise:</h3>
