--- a/Major projects.html
+++ b/Major projects.html
@@ -39,6 +39,7 @@
             <li><a href="publications.html">Research Work</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
+            <li><a href="students_newpage.html">Our Team</a></li>
             <li><a href="index.html#talks-section">Talks</a></li>
             <li><a href="index.html#contact-section">Contact Me</a></li>
             <li><a href="pics vivek/CV.pdf" target="_blank" download>Download CV</a></li>
