--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <li><a href="publications.html">Research Work</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
+            <li><a href="students_newpage.html">Our Team</a></li>
             <li><a href="#talks-section">Talks</a></li>
             <li><a href="#contact-section">Contact Me</a></li>
         </ul>
