updating the changes

--- a/Major projects.html
+++ b/Major projects.html
@@ -33,16 +33,13 @@
 
     <nav class="quick-links">
         <ul>
-            <li><a href="index.html#home-section">Home</a></li>
-            <li><a href="index.html#awards-section">Awards</a></li>
-            <li><a href="index.html#conferences-section">Conferences</a></li>
-            <li><a href="publications.html">Research Work</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
             <li><a href="students_newpage.html">Our Team</a></li>
-            <li><a href="index.html#talks-section">Talks</a></li>
             <li><a href="index.html#contact-section">Contact Me</a></li>
-            <li><a href="pics vivek/CV.pdf" target="_blank" download>Download CV</a></li>
         </ul>
     </nav>
 
@@ -289,21 +286,13 @@
             <tr>
                 <td>6</td>
                 <td>PI</td>
-                <td>Preparation of Action Plan on “Alternate Technology for Management of Wastewater in Drains” for major drains under the jurisdiction of SDMC</td>
-                <td>SDMC</td>
-                <td>17,70,000</td>
-                <td>Ongoing</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>PI</td>
                 <td>Performance Evaluation and Adequacy Assessment of HSIIDC CETPs in Haryana</td>
                 <td>HSIIDC</td>
                 <td>10,00,000</td>
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>8</td>
+                <td>7</td>
                 <td>PI</td>
                 <td>Continuous drain monitoring in Ganga Basin</td>
                 <td>CPCB</td>
@@ -311,7 +300,7 @@
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>9</td>
+                <td>8</td>
                 <td>PI</td>
                 <td>Inspection of Grossly Pollution Industries (GPIs) discharging into main stem of Hindon and its tributaries</td>
                 <td>CPCB</td>
@@ -319,15 +308,7 @@
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>10</td>
-                <td>PI</td>
-                <td>Inspection of Grossly Pollution Industries (GPIs) discharging into main stem of River Ganga and its tributaries</td>
-                <td>CPCB</td>
-                <td>49,64,450</td>
-                <td>Completed</td>
-            </tr>
-            <tr>
-                <td>11</td>
+                <td>9</td>
                 <td>PI</td>
                 <td>Performance Evaluation and Adequacy Assessment of Proposed Prayagraj Sewage project</td>
                 <td>UP Jal Nigam & NMCG</td>
@@ -335,7 +316,7 @@
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>12</td>
+                <td>10</td>
                 <td>PI</td>
                 <td>Performance Evaluation and Adequacy Assessment of Proposed Mathura Sewage project</td>
                 <td>UP Jal Nigam & NMCG</td>
@@ -343,7 +324,7 @@
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>13</td>
+                <td>11</td>
                 <td>PI</td>
                 <td>Performance Evaluation of Electrocoagulation based Sewage and wastewater treatment system and Adequacy Assessment of Sewage Treatment Plants of various capacities</td>
                 <td>Uttarakhand Pey Jal Nigam & Confident Engg</td>
@@ -351,7 +332,7 @@
                 <td>Completed</td>
             </tr>
             <tr>
-                <td>14</td>
+                <td>12</td>
                 <td>PI</td>
                 <td>Investigations and Research in Air Purifier Technology using Ionization of Atmosphere</td>
                 <td>Omayur Technologies Pvt. Ltd.</td>
