--- a/conferences.html
+++ b/conferences.html
@@ -6,63 +6,31 @@
     <link rel="stylesheet" href="style.css">
     <title>Masters/Doctoral Supervision</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        #students-section {
-            margin: 20px;
-        }
-
-        #masters-thesis {
-            margin: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .students-details .title {
-            font-weight: bold;
-            font-size: 14px;
-        }
-        .students-details .co-supervisor {
-            font-weight: bold;
-            font-size: 13px;
-        }
-        .students-details a {
-            color: rgb(117, 16, 126);
-            text-decoration: none;
-            display: inline-block;
-            margin-right: 10px;
-        }
-        .students-details a i {
-            margin-right: 5px;
-        }
-    </style>
 </head>
 <body>
 
     <nav class="quick-links">
         <ul>
-            <li><a href="index.html#home-section">Home</a></li>
-            <li><a href="index.html#awards-section">Awards</a></li>
-            <li><a href="index.html#conferences-section">Conferences</a></li>
-            <li><a href="publications.html">Research Work</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
-            <li><a href="students.html">Research Students</a></li>
+            <li><a href="students.html">Research Projects</a></li>
             <li><a href="students_newpage.html">Our Team</a></li>
-            <!-- <li><a href="index.html#talks-section">Talks</a></li> -->
             <li><a href="index.html#contact-section">Contact Me</a></li>
-            <li><a href="pics vivek/CV.pdf" target="_blank" download>Download CV</a></li>
         </ul>
     </nav>
+
+    <section id="awards-section" class="professor-info">
+        <h2 style ="color: rgb(232, 56, 56); margin-top: 50px;">Awards, Honors, and Invited Talks</h2>
+        <ul>
+          <li>Elected International Director of Bio-Forest Product Division of American Institute of
+            Chemical Engineers (AIChE) for three years from 2014-2017</li>
+          <li> Invited Speaker at International Workshop on “Making Smart, Sustainable and Healthy
+            Cities: Learning’s from US, China and India” organized by University of Minnesota and
+            ICLEI-SA at 11-12 Jan 2016, New Delhi</li>
+        </ul>
+    </section>
 
     <section id="conferences-section" class="professor-info">
         <h2 style ="color: rgb(232, 56, 56);">Workshops and Conferences Organized</h2>
