--- a/students.html
+++ b/students.html
@@ -51,15 +51,13 @@
 
     <nav class="quick-links">
         <ul>
-            <li><a href="index.html#home-section">Home</a></li>
-            <li><a href="index.html#awards-section">Awards</a></li>
-            <li><a href="index.html#conferences-section">Conferences</a></li>
-            <li><a href="publications.html">Research Work</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
-            <li><a href="index.html#talks-section">Talks</a></li>
+            <li><a href="students_newpage.html">Our Team</a></li>
             <li><a href="index.html#contact-section">Contact Me</a></li>
-            <li><a href="pics vivek/CV.pdf" target="_blank" download>Download CV</a></li>
         </ul>
     </nav>
     
@@ -77,7 +75,7 @@
             <th>Co-Supervisor</th>
             <!-- <th>Research Profiles</th> -->
             <!-- <th>Google Scholar</th> -->
-            <th>LinkedIn</th>
+            <!-- <th>LinkedIn</th> -->
         </tr>
         <tr>
             <td>1</td>
@@ -88,7 +86,7 @@
             <td class="co-supervisor">Prof Kirtiraj Gaikwad & Prof Ashish Kadam</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>2</td>
@@ -99,7 +97,7 @@
             <td class="co-supervisor">Prof Kavya Dashora</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>3</td>
@@ -110,7 +108,7 @@
             <td class="co-supervisor">Prof Dharm Dutt</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>4</td>
@@ -121,7 +119,7 @@
             <td class="co-supervisor">Prof Dharm Dutt</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>5</td>
@@ -132,7 +130,7 @@
             <td class="co-supervisor">Prof Dharm Dutt</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>6</td>
@@ -143,7 +141,7 @@
             <td class="co-supervisor">Prof. M.C Bansal</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>7</td>
@@ -154,7 +152,7 @@
             <td class="co-supervisor">Prof. M.C Bansal</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>8</td>
@@ -165,7 +163,7 @@
             <td class="co-supervisor">Prof. V.P. Singh</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>9</td>
@@ -176,7 +174,7 @@
             <td class="co-supervisor">Prof. V.K Vijay</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>10</td>
@@ -187,7 +185,7 @@
             <td class="co-supervisor">Prof. M.C Bansal</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>11</td>
@@ -198,7 +196,7 @@
             <td class="co-supervisor">Prof. B.R Gurjer</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
         <tr>
             <td>12</td>
@@ -209,7 +207,7 @@
             <td class="co-supervisor">Prof. Y.S. Negi</td>
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-university"></i>ResearchGate</a></td> -->
             <!-- <td><a href="#" target="_blank"><i class="fas fa-fw fa-graduation-cap"></i>Google Scholar</a></td> -->
-            <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td>
+            <!-- <td><a href="#" target="_blank"><i class="fab fa-fw fa-linkedin"></i>LinkedIn</a></td> -->
         </tr>
     </table>
 </section>
