--- a/students_newpage.html
+++ b/students_newpage.html
@@ -157,14 +157,12 @@
 <body>
     <nav class="quick-links">
         <ul>
-            <li><a href="index.html#home-section">Home</a></li>
-            <li><a href="index.html#awards-section">Awards</a></li>
-            <li><a href="index.html#conferences-section">Conferences</a></li>
-            <li><a href="publications.html">Research Work</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
             <li><a href="students.html">Research Students</a></li>
             <li><a href="students_newpage.html">Our Team</a></li>
-            <li><a href="index.html#talks-section">Talks</a></li>
             <li><a href="index.html#contact-section">Contact Me</a></li>
         </ul>
     </nav>
