--- a/conferences.html
+++ b/conferences.html
@@ -12,37 +12,38 @@
     <nav class="quick-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="research areas.html">Research Areas</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
-            <li><a href="students.html">Research Projects</a></li>
-            <li><a href="students_newpage.html">Our Team</a></li>
-            <li><a href="index.html#contact-section">Contact Me</a></li>
+            <!-- <li><a href="students.html">Research Projects</a></li> -->
+            <li><a href="students_newpage.html">Research Scholars</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
     <section id="awards-section" class="professor-info">
-        <h2 style ="color: rgb(232, 56, 56); margin-top: 50px;">Awards, Honors, and Invited Talks</h2>
+        <h2 style ="color: rgb(232, 56, 56); margin-top: 50px;text-decoration: underline;">Awards and Honors</h2>
         <ul>
-          <li>Elected International Director of Bio-Forest Product Division of American Institute of
-            Chemical Engineers (AIChE) for three years from 2014-2017</li>
-          <li> Invited Speaker at International Workshop on “Making Smart, Sustainable and Healthy
-            Cities: Learning’s from US, China and India” organized by University of Minnesota and
+          <li><i class="fa fa-trophy" style="color:#ffd900"></i> Elected International Director of <b>Bio-Forest Product Division of American Institute of
+            Chemical Engineers (AIChE)</b> for three years from 2014-2017</li>
+          <li><i class="fa fa-trophy" style="color:#FFD900"></i> Invited Speaker at International Workshop on <b>“Making Smart, Sustainable and Healthy
+            Cities: Learning’s from US, China and India”</b> organized by University of Minnesota and
             ICLEI-SA at 11-12 Jan 2016, New Delhi</li>
         </ul>
     </section>
 
     <section id="conferences-section" class="professor-info">
-        <h2 style ="color: rgb(232, 56, 56);">Workshops and Conferences Organized</h2>
+        <h2 style ="color: rgb(232, 56, 56);text-decoration: underline;">Workshops and Conferences Organized</h2>
         <ul>
-          <li>Organized Environmental Segment of IISF 2020, 22-25 Nov 2021</li>
-          <li>Co-organized Water Segment of IISF 2020, 22-25 Dec 2020</li>
-          <li>Organized Three Days Workshop on Technology Outreach as an Enabler for Inclusive & Sustainable Development – Tech4Seva, August 2019</li>
-          <li>Organized National Consultation Workshop on Rural Liquid Waste Management Programme on 29th January 2018. Supported by Ministry of Drinking Water and Sanitation</li>
-          <li>Organized National Consultation Workshop on Rural Solid Waste Management Programme on 29th January 2018. Supported by Ministry of Drinking Water and Sanitation</li>
-          <li>Conducted an interactive and exploratory tour “Srijan” for approximately 120 artisans from Madhya Pradesh to Uttar Pradesh. Supported by MP Council of Science & Technology, 2007</li>
-          <li>Organized a National Workshop on "Scientific Management of Natural Resources for Sustainable Development" from 14th – 18th May 2008</li>
-          <li>Organized 7th Round Table of NCRI on 20th Sep 2008 at IIT Roorkee Saharanpur Campus</li>
+          <li>Organized <b>Environmental Segment</b> of IISF 2020, 22-25 Nov 2021</li>
+          <li>Co-organized <b>Water Segment of IISF 2020</b>, 22-25 Dec 2020</li>
+          <li>Organized Three Days Workshop on <b>Technology Outreach as an Enabler for Inclusive & Sustainable Development – Tech4Seva</b>, August 2019</li>
+          <li>Organized <b>National Consultation Workshop on Rural Liquid Waste Management Programme</b> on 29th January 2018. <span style="color: blue;"><i>(Supported by Ministry of Drinking Water and Sanitation)</span></i></li>
+          <li>Organized <b>National Consultation Workshop on Rural Solid Waste Management Programme</b> on 29th January 2018. <span style="color: blue;"><i>(Supported by Ministry of Drinking Water and Sanitation)</span></i></li>
+          <li>Conducted an interactive and exploratory tour <b>“Srijan”</b> for approximately 120 artisans from Madhya Pradesh to Uttar Pradesh. <span style="color: blue;"><i>(Supported by MP Council of Science & Technology, 2007)</span></i></li>
+          <li>Organized a National Workshop on <b>"Scientific Management of Natural Resources for Sustainable Development"</b> from 14th – 18th May 2008</li>
+          <li>Organized 7th <b>Round Table of NCRI</b> on 20th Sep 2008 at IIT Roorkee Saharanpur Campus</li>
         </ul>
       </section>
 
@@ -87,7 +88,7 @@
         </style>
     
     <section id="talks-section" class="professor-info">
-        <div class="talks-header" style ="color: rgb(232, 56, 56);">Special Lectures</div>
+        <div class="talks-header" style ="color: rgb(232, 56, 56);text-decoration: underline;">Special Lectures</div>
         <ul class="talk-list">
             <li class="talk-item">
                 <div class="talk-date">5th June 2022</div>
