--- a/publications.html
+++ b/publications.html
@@ -52,12 +52,13 @@
     <nav class="quick-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="research areas.html">Research Areas</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
-            <li><a href="students.html">Research Students</a></li>
-            <li><a href="students_newpage.html">Our Team</a></li>
-            <li><a href="index.html#contact-section">Contact Me</a></li>
+            <!-- <li><a href="students.html">Research Students</a></li> -->
+            <li><a href="students_newpage.html">Research Scholars</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
     
