--- a/students_newpage.html
+++ b/students_newpage.html
@@ -53,6 +53,7 @@
         .quick-links {
             background-color: #a20101;
             padding: 10px 0;
+            font-style: italic;
         }
 
         .quick-links ul {
@@ -129,7 +130,8 @@
             margin: auto;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background: #000;
+            background: none;
+            /* background: url('pics vivek/IITD.jpg') no-repeat center center; */
         }
 
         /* Slideshow images */
@@ -151,6 +153,20 @@
         .slideshow-container img.previous {
             left: -100%;
         }
+                    
+        /* Background image with blur effect */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('pics vivek/IITD.jpg') no-repeat center center;
+            background-size: cover;
+            filter: blur(5px);
+            z-index: -1;
+        }
     </style>
     <title>Research Students</title>
 </head>
@@ -158,24 +174,27 @@
     <nav class="quick-links">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="research areas.html">Research Areas</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="Major projects.html">Major Projects</a></li>
-            <li><a href="students.html">Research Students</a></li>
-            <li><a href="students_newpage.html">Our Team</a></li>
-            <li><a href="index.html#contact-section">Contact Me</a></li>
+            <!-- <li><a href="students.html">Research Students</a></li> -->
+            <li><a href="students_newpage.html">Research Scholars</a></li>
+            <li><a href="conferences.html">Conferences</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
 
     <section id="student-newpage" class="students_newpage">
-        <h2 style="color: rgb(232, 56, 56); margin-top: 60px;"><center>Our Team</center></h2>
+        <h2 style="margin-top: 60px;"><center>Photo Gallery</center></h2>
 
         <div class="slideshow-container">
-            <img src="pics vivek/group1.jpg" class="active" alt="Group Photo 1">
-            <img src="pics vivek/group2.jpg" alt="Group Photo 2">
-            <img src="pics vivek/group3.jpg" alt="Group Photo 3">
+            <img src="pics vivek/group2.jpg" class="active" alt="Group Photo 1">
+            <img src="pics vivek/group3.jpg" alt="Group Photo 2">
+            <!-- <img src="pics vivek/group3.jpg" alt="Group Photo 3"> -->
         </div>
         <script src="script.js"></script>
+
+        <h2 style="color: rgb(232, 56, 56); margin-top: 5%; text-decoration: underline;"><center>List of current research scholars</center></h2>
 
 
             <div class="student-profile">
@@ -406,6 +425,26 @@
                         <a href="https://scholar.google.com/citations?hl=en&authuser=1&user=8wsHBw4AAAAJ" target="_blank">Google Scholar</a>
                         <a href="https://www.researchgate.net/profile/Monalisa-Sahoo-4" target="_blank">ResearchGate</a>
                     </div>
+                </div>
+            </div>
+
+            <div class="student-profile">
+                <img src="pics vivek/rahul.jpg" alt="Project Image 1" style="width: 220px; height: 220px;">
+                <div class="details">
+                    <div class="name">Rahul Dwivedi</div>
+                    <br>
+                    <div>Degree: M.tech Civil engineering at IIT Roorkee</div>  
+                    <br>
+                    <div>Major research domain: Drinking water</div> 
+                    <br>
+                    <div class="research-topic"><u><span class="areas-of-research">Research Topic: </span>Development of a framework for sustainable water management for rural areas.</u></div>
+                    <br>
+                    <!-- <div><span class="areas-of-research">Areas of Research: </span>Drying technology, Novel product development, sensory and consumer science, Extraction, bioactive components</div> -->
+                    <!-- <div class="buttons"> -->
+                        <!-- <a href="https://www.linkedin.com/in/monalisa-sahoo-68454868/" target="_blank">LinkedIn</a> -->
+                        <!-- <a href="https://scholar.google.com/citations?hl=en&authuser=1&user=8wsHBw4AAAAJ" target="_blank">Google Scholar</a> -->
+                        <!-- <a href="https://www.researchgate.net/profile/Monalisa-Sahoo-4" target="_blank">ResearchGate</a> -->
+                    <!-- </div> -->
                 </div>
             </div>
         </section>
